# lib-image-cxx

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: benchmark.yml  tests.yml
benchmarks/: CMakeLists.txt  benchmarks.cpp  common.hpp  qoi_benchmark.cpp
src/: CMakeLists.txt  formats.cpp  formats.hpp
src/bmp/: CMakeLists.txt  README.md  bmp_common.cpp  bmp_common.hpp  bmp_decoder.cpp  bmp_decoder.hpp  bmp_encoder.cpp  bmp_encoder.hpp  bmp_format.hpp  bmp_settings.hpp
src/common/: CMakeLists.txt  bits.cpp  bits.hpp  decoder.hpp  deflate_compressor.cpp  deflate_compressor.hpp  encoder.hpp  exceptions.hpp  format.hpp  format_definition.hpp  log.hpp  pixel.cpp  pixel.hpp  raw_image.cpp  raw_image.hpp  stream.cpp  stream.hpp
src/formats/: CMakeLists.txt  color.cpp  color.hpp  stream.cpp  stream.hpp
src/formats/bmp/: CMakeLists.txt  chunks.cpp  chunks.hpp  image.hpp
src/formats/common/: CMakeLists.txt  channels.hpp  colorspace.hpp  decoder.hpp  pixel.cpp  pixel.hpp  raw_image.cpp  raw_image.hpp  stream.hpp
src/formats/qoi/: CMakeLists.txt  chunks.cpp  chunks.hpp  decode_exception.hpp  image.cpp  image.hpp  qoi_chunks.cpp  qoi_chunks.hpp  qoi_decoder.cpp  qoi_decoder.hpp  qoi_encoder.cpp  qoi_image.cpp  qoi_image.hpp  stream.cpp
src/png/: CMakeLists.txt  png_common.cpp  png_common.hpp  png_decoder.cpp  png_decoder.hpp  png_encoder.cpp  png_encoder.hpp  png_format.hpp  png_settings.hpp
src/qoi/: CMakeLists.txt  qoi_chunks.cpp  qoi_chunks.hpp  qoi_common.cpp  qoi_common.hpp  qoi_decoder.cpp  qoi_decoder.hpp  qoi_definition.hpp  qoi_encoder.cpp  qoi_encoder.hpp  qoi_format.hpp  qoi_settings.hpp
test_images/: CMakeLists.txt  image_1.qoi
tests/: CMakeLists.txt  bmp_tests.cpp  common_tests.cpp  conversion_common.hpp  conversion_tests.cpp  qoi_tests.cpp
tests/test_images/: CMakeLists.txt  LICENSE.md
viewer/: CMakeLists.txt  README.md  app.cpp  app.hpp  image_widget.cpp  image_widget.hpp  image_widget_bmp.cpp  image_widget_bmp.hpp  image_widget_png.cpp  image_widget_png.hpp  image_widget_qoi.cpp  image_widget_qoi.hpp  main.cpp  menu_bar.cpp  menu_bar.hpp  window.cpp  window.hpp
